<resources>

    <string name="app_name">Poupa+</string>

    <!-- TEXTOS USADOS NA PARTE DO SLIDE DE BOAS VINDAS -->
    <string name="slide_informativo">Apresentação Rápida</string>
    <string name="circulo_texto" translatable="false">•</string>
    <string name="organize_suas_contas_de_onde_estiver">Organize suas finanças de qualquer lugar</string>
    <string name="simples_f_cil_de_usar_e_gr_tis">Simples, fácil de usar e gratuito</string>
    <string name="nunca_mais_esque_a_de_pagar_uma_conta">Nunca mais esqueça de pagar uma conta</string>
    <string name="receba_alertas_quando_quiser">Receba alertas quando preferir</string>
    <string name="saiba_para_onde_est_indo_seu_dinheiro">Saiba para onde seu dinheiro está indo</string>
    <string name="categorize_seus_lan_amentos_e_vendo_o_n_destino_de_cada_centavo">Categorize seus lançamentos e veja onde cada centavo vai</string>

    <!-- TEXTOS USADOS NA CRIAÇÃO DE CONTA E LOGIN PARTE 1-->
    <string name="j_tenho_uma_conta">Já tenho uma conta</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="planeje_sua_vida_financeira_e_saia_ndo_vermelho">Planeje sua vida financeira e saia do vermelho</string>
    <string name="crie_sua_conta_gratuitamente">Crie Sua Conta Gratuitamente</string>
    <string name="alerta_visto" translatable="false">Ok</string>

    <!-- TEXTOS USADOS NA CRIAÇÃO DE CONTA E LOGIN PARTE 2-->
    <string name="crie_sua_conta_gr_tis">Crie sua conta gratuita</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="acessar">ACESSAR</string>

    <!-- TEXTOS USADOS NOS CAMPOS, CRIAÇÃO DO USUÁRIO E LOGIN -->
    <string name="validar_campos">Por favor, preencha todos os campos</string>
    <string name="confirmar_criacao_usuario">Conta criada com sucesso</string>
    <string name="senha_email_invalidos">Senha ou e-mail inválidos</string>
    <string name="sucesso_login">Login bem-sucedido</string>
    <string name="email_duplicado">Este e-mail já está cadastrado</string>
    <string name="email_invalido">Digite um endereço de e-mail válido</string>
    <string name="acessar_por_meio_de">Acessar usando</string>
    <string name="entrar_com_google">Entrar com o Google</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="ou">OU</string>
    <string name="titulo_alerta_criar_conta">Crie seu PIN Personalizado</string>
    <string name="mensagem_alerta_criar_conta">Crie um PIN seguro para sua nova conta. Mantenha seu PIN em segurança e não o compartilhe com ninguém.</string>
    <string name="biometric_title">Autenticação necessária</string>
    <string name="biometric_subtitle">Autenticação importante </string>
    <string name="biometric_desc">Por favor, Autentique-se para ser capaz de ver as informações da sua conta</string>
    <string name="sucesso_biometria">Autenticado com sucesso</string>
    <string name="falha_biometria">Falha na autenticação</string>


    <!-- TEXTOS USADOS NA JANELA PRINCIPAL -->
    <string name="saudacao">Olá, </string>
    <string name="poupa_mais">POUPA MAIS</string>
    <string name="icon_do_menu">Ícone do Menu</string>
    <string name="valor">Valor</string>
    <string name="carregando">Carregando…</string>
    <string name="r_0">R$ 0</string>
    <string name="moeda">R$ </string>
    <string name="saldo_geral">Saldo Geral</string>
    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string name="excluir_movimentacao_title">Excluir Movimentação da Conta</string>
    <string name="excluir_movimentacao_message">Você tem certeza que deseja realmente excluir essa movimentação da conta ?</string>
    <string name="excluir_movimentacao_confirm">Confirmar</string>
    <string name="excluir_movimentacao_cancel">Cancelar</string>
    <string name="exluir_movimentacao_cacelado_alerta">Cancelado</string>
    <string name="movimentacao_apagada_com_sucesso">Movimentação apagada com sucesso</string>



    <!-- TEXTOS USADOS NA JANELA DE LUCROS E DESPESAS -->
    <string name="voltar">Voltar</string>
    <string name="data">Data</string>
    <string name="categoria">Categoria</string>
    <string name="descri_o">Descrição</string>
    <string name="adicionar_despesa">Adicionar Despesa</string>
    <string name="r_00_00">R$ 00.00</string>
    <string name="adicionar_lucro">Adicionar Lucro</string>
    <string name="movimentacao_salva">Movimentação salva com sucesso</string>
    <string name="data_invalida">preencha a data no formato dd/MM/yyyy</string>

    <!-- TEXTOS USADOS QUANDO O USUÁRIO FAZ LOGIN COM O GOOGLE -->
    <string name="sem_conexao">Verifique sua conexão com a Internet</string>
    <string name="erro_login_google">Erro ao fazer login com o Google</string>

    <!-- TEXTOS USADOS NO MENU -->
    <string name="desconectar">Desconectar</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="email_menu">SeuEmail@exemplo.com</string>
    <string name="nome_usuario_menu">Seu Nome</string>
    <string name="foto_de_perfil">Foto de Perfil</string>

    <!-- TEXTOS USADOS NO MENU (PERFIL DO USUÁRIO) -->
    <string name="alterar_foto">Alterar Foto</string>
    <string name="salvar_altera_es">Salvar alterações</string>
    <string name="novo_e_mail">Novo e-mail</string>
    <string name="novo_nome">Novo nome</string>
    <string name="titulo_alerta">Atualizar Dados</string>
    <string name="mensagem_alerta">Tem certeza de que deseja atualizar suas informações?</string>
    <string name="opcao_sim_alerta">Sim</string>
    <string name="opcao_nao_alerta">Não</string>
    <string name="atualizacao_cancelada">Atualização cancelada</string>
    <string name="sucesso_ao_atualizar">Dados atualizados com sucesso</string>

    <!--TEXTOS USADOS PARA MENSAGENS DE ERRO INTERNO NO APP-->
    <string name="titulo_erro">Problema Interno</string>
    <string name="mensagem_erro">Desculpe, ocorreu um erro interno no aplicativo.</string>
    <string name="mensagem_erro_nao">Entendido, respeitamos sua decisão</string>

    <!--TEXTOS USADOS NA ACTIVITY MINHAS RECEITAS-->
    <string name="resultados">Resultados</string>
    <string name="buscar">Buscar</string>
    <string name="_0" translatable="false">0</string>
    <string name="minhas_receitas">Minhas Receitas</string>

    <!--TEXTOS USADOS NO APP INTEIRO(MODO AVIÃO)-->
    <string name="modo_aviao_ON">Modo avião ativado</string>
    <string name="modo_aviao_OFF">Modo avião desativado</string>

</resources>