<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.InformativoConta">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crie_sua_conta_gratuitamente"
        android:textAlignment="center"
        android:textColor="@color/pretoDestaque"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/planeje_sua_vida_financeira_e_saia_ndo_vermelho"
        android:textAlignment="center"
        android:textColor="@color/cinzaEscuro"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bntCadastrar"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/verdeEscuro"
        android:onClick="bntCriarConta"
        android:text="@string/cadastre_se"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textTenhoConta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:onClick="bntEntrarConta"
        android:text="@string/j_tenho_uma_conta"
        android:textAlignment="center"
        android:textColor="@color/cinzaEscuro"
        android:textSize="20sp" />
</LinearLayout>