<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCategoriaAdpter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/categoria"
                android:textColor="@color/pretoDestaque"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textValorAdpter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/valor"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textDescricaoAdpter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descri_o"
            android:textColor="@color/cinzaEscuro"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>