<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/bntAcessar"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="106dp"
        android:backgroundTint="@color/verdeEscuro"
        android:text="@string/acessar"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoSenha" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/email_icon_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/campoSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/cadeado_icon_lock_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/bntAcessar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoEmail" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_logo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/acesse_sua_conta"
        android:textColor="@color/pretoDestaque"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/campoEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

</androidx.constraintlayout.widget.ConstraintLayout>